# Mentem

./: .env.example  docker-compose.yml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  rustfmt.toml
api/docs/: CODE_ARCHITECTURE.md
api/migrations/: 0001_create_users.sql
api/src/: lib.rs  main.rs  route.rs  state.rs
api/src/config/: mod.rs
api/src/init/: database.rs  env.rs  mod.rs  rate_limit.rs  router.rs
api/src/modules/: mod.rs
api/src/modules/ai/: domain.rs  error.rs  mod.rs  ports.rs  service.rs
api/src/modules/ai/adapters/: anthropic.rs  mod.rs
api/src/modules/auth/: domain.rs  error.rs  extractor.rs  handler.rs  hasher.rs  http_routes.rs  mod.rs  ports.rs  repository.rs  service.rs  token.rs
api/src/modules/auth/adapters/: hasher.rs  mod.rs  repository.rs  token.rs
api/src/modules/auth/hasher/: argon2.rs  mod.rs
api/src/modules/auth/repository/: mod.rs  pg.rs
api/src/modules/auth/token/: jwt.rs  mod.rs
api/src/modules/health/: handler.rs  mod.rs
